# azure-cvm-tooling

./: LICENSE  Readme.md
.github/: dependabot.yml
.github/workflows/: e2e-self-hosted.yaml  e2e.yaml  rust.yml  security.yml
az-cvm-vtpm/: .gitignore  Cargo.toml  README.md
az-cvm-vtpm/az-snp-vtpm/: Cargo.toml  README.md
az-cvm-vtpm/az-snp-vtpm/example/: Cargo.toml
az-cvm-vtpm/az-snp-vtpm/example/src/: main.rs
az-cvm-vtpm/az-snp-vtpm/src/: amd_kds.rs  certs.rs  hcl.rs  imds.rs  lib.rs  main.rs  report.rs  vtpm.rs
az-cvm-vtpm/az-snp-vtpm/test/: certs.pem
az-cvm-vtpm/az-snp-vtpm/tests/: integration_tests.rs
az-cvm-vtpm/az-tdx-vtpm/: Cargo.toml  README.md
az-cvm-vtpm/az-tdx-vtpm/src/: hcl.rs  imds.rs  lib.rs  main.rs  report.rs  tdx.rs  verify.rs
az-cvm-vtpm/az-tdx-vtpm/tests/: integration_tests.rs
az-cvm-vtpm/detect-cvm-type/: Cargo.toml
az-cvm-vtpm/detect-cvm-type/src/: lib.rs  main.rs
az-cvm-vtpm/src/: lib.rs
az-cvm-vtpm/src/hcl/: mod.rs
az-cvm-vtpm/src/tdx/: mod.rs
az-cvm-vtpm/src/vtpm/: mod.rs  verify.rs
az-cvm-vtpm/test/: akpub.pem
az-report-ready/: Cargo.toml  README.md
az-report-ready/src/: main.rs
az-report-ready/systemd/: az-report-ready.service
az-snp-vtpm/: .gitignore  Cargo.toml  Makefile  README.md
az-snp-vtpm/arm/: cvm.bicep
az-snp-vtpm/example/: Cargo.toml
az-snp-vtpm/example/src/: main.rs
az-snp-vtpm/src/: amd_kds.rs  certs.rs  hcl.rs  imds.rs  lib.rs  main.rs  report.rs  vtpm.rs
docs/: end-to-end-test.md
vtpm-snp/: Cargo.toml  Readme.md
vtpm-snp-report/: Cargo.toml  Makefile  Readme.md
vtpm-snp-report/arm/: cvm.bicep
vtpm-snp-report/src/: certs.rs  hcl.rs  main.rs  report.rs  vtpm.rs
vtpm-snp-report/test/: certs.pem  quote_msg  quote_sig
vtpm-snp/src/: certs.rs  hcl.rs  main.rs  report.rs  vtpm.rs
vtpm-snp/test/: akpub.pem
