[package]
name = "az-cvm-vtpm"
version = "0.7.1"
edition = "2021"
repository = "https://github.com/kinvolk/azure-cvm-tooling/"
license = "MIT"
keywords = ["azure", "tpm", "sev-snp", "tdx"]
categories = ["cryptography", "virtualization"]
description = "Package with shared code for Azure Confidential VMs"

[workspace]
members = [
	"az-snp-vtpm",
	"az-tdx-vtpm",
	"az-snp-vtpm/example",
]

[lib]
path = "src/lib.rs"

[dependencies]
bincode.workspace = true
jsonwebkey = { version = "0.3.5", features = ["pkcs-convert"] }
memoffset = "0.9.0"
openssl = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
serde-big-array = "0.5.1"
sev.workspace = true
sha2 = "0.10.8"
thiserror.workspace = true
tss-esapi = { version = "7.5.1", optional = true }
zerocopy.workspace = true

[features]
tpm = ["tss-esapi"]
default = ["attester", "verifier"]
attester = ["tpm"]
verifier = ["openssl", "sev/openssl", "tpm"]

[workspace.dependencies]
bincode = "1.3.1"
clap = { version = "4", features = ["derive"] }
openssl = "0.10"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "2.0.3"
sev = "5.0.0"
ureq = { version = "2.6.2", default-features = false, features = ["json"] }
zerocopy = { version = "0.7.26", features = ["derive"] }
hex = "0.4"
