[package]
name = "az-report-ready"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/kinvolk/azure-cvm-tooling/"
license = "MIT"
keywords = ["azure", "goalstate"]
categories = ["virtualization"]
description = "Register Azure VMs as ready"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
log = "0.4.20"
quick-xml = { version = "0.30.0", features = ["encoding", "serialize", "serde-types"] }
serde = { version = "1", features = ["derive"] }
ureq = { version = "2.8.0", default-features = false, features = ["serde"] }
