[package]
name = "az-snp-vtpm"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/kinvolk/azure-cvm-tooling/"
license = "MIT"
keywords = ["azure", "tpm", "sev-snp"]
categories = ["cryptography", "virtualization"]
description = "vTPM based SEV-SNP attestation for Azure Confidential VMs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "snp-vtpm"
path = "src/main.rs"

[dependencies]
bincode = "1"
clap = { version = "4", features = ["derive"] }
jsonwebkey = { version = "0.3.5", features = ["pkcs-convert"] }
memoffset = "0.8.0"
openssl = { version = "0.10.45", features = ["vendored"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sev = { version = "1", features = ["openssl"] }
static_assertions = "^1.1.0"
thiserror = "1.0.38"
tss-esapi = "7.2"
