[package]
name = "az-snp-vtpm"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/kinvolk/azure-cvm-tooling/"
license = "MIT"
keywords = ["azure", "tpm", "sev-snp"]
categories = ["cryptography", "virtualization"]
description = "vTPM based SEV-SNP attestation for Azure Confidential VMs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "snp-vtpm"
path = "src/main.rs"
required-features = ["attester", "verifier"]

[dependencies]
bincode = "1"
clap = { version = "4", features = ["derive"] }
jsonwebkey = { version = "0.3.5", features = ["pkcs-convert"] }
memoffset = "0.8.0"
openssl = { version = "0.10.45", features = ["vendored"], optional = true }
rsa = { version = "0.8.2", features = ["pkcs5", "sha2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sev = "1"
sha2 = "0.10.6"
static_assertions = "^1.1.0"
thiserror = "1.0.38"
tss-esapi = "7.2"
ureq = { version = "2.6.2", default-features = false, features = ["json"] }

[features]
default = ["attester", "verifier"]
attester = []
verifier = ["openssl", "sev/openssl", "ureq/tls"]

[workspace]
members = ["example"]
