[package]
name = "vtpm-snp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
clap = { version = "4", features = ["derive"] }
memoffset = "0.8.0"
# TODO: disable vendoring
openssl = { version = "0.10.45", features = ["vendored"] }
picky-asn1-der = "0.4.0"
picky-asn1-x509 = "0.9.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sev = { version = "1", features = ["openssl"] }
static_assertions = "^1.1.0"
thiserror = "1.0.39"
tss-esapi = "7.2"
