[package]
name = "az-snp-vtpm"
version = "0.8.1"
edition = "2021"
repository = "https://github.com/kinvolk/azure-cvm-tooling/"
license = "MIT"
keywords = ["azure", "tpm", "sev-snp"]
categories = ["cryptography", "virtualization"]
description = "vTPM based SEV-SNP attestation for Azure Confidential VMs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "snp-vtpm"
path = "src/main.rs"
required-features = ["attester", "verifier"]

[dependencies]
az-cvm-vtpm = { path = "..", version = "0.8.1", default-features = false, features = ["attester"] }
clap.workspace = true
openssl = { workspace = true, optional = true }
serde.workspace = true
sev.workspace = true
thiserror.workspace = true
ureq.workspace = true

[dev-dependencies]
serde_json.workspace = true
hex.workspace = true

[features]
default = ["attester", "verifier"]
attester = []
verifier = ["az-cvm-vtpm/verifier", "openssl", "ureq/native-tls", "ureq/json"]
integration_test = []
