[package]
name = "az-tdx-vtpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "tdx-vtpm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
base64-url = "2.0.0"
bincode = "1.3.3"
jsonwebkey = { version = "0.3.5", features = ["pkcs-convert"] }
memoffset = "0.9.0"
serde = { version = "1.0.189", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.107"
sha2 = "0.10.8"
tss-esapi = "7.4"
ureq = { version = "2.6.2", default-features = false, features = ["json"] }
az-snp-vtpm = { path = "../az-snp-vtpm" }
sev = "1.2.0"
thiserror = "1.0.49"
openssl = { version = "0.10", optional = true }

[features]
default = ["attester", "verifier"]
attester = []
verifier = ["az-snp-vtpm/verifier", "openssl"]
