[package]
name = "az-tdx-vtpm"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "tdx-vtpm"
path = "src/main.rs"

[dependencies]
az-cvm-vtpm = { path = "..", version = "0.4.0" }
base64-url = "2.0.0"
bincode.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ureq.workspace = true
zerocopy.workspace = true

[dev-dependencies]
openssl.workspace = true

[features]
default = ["attester", "verifier"]
attester = []
verifier = ["az-cvm-vtpm/verifier"]
