[package]
name = "az-tdx-vtpm"
version = "0.5.2"
edition = "2021"
repository = "https://github.com/kinvolk/azure-cvm-tooling/"
license = "MIT"
keywords = ["azure", "tpm", "tdx"]
categories = ["cryptography", "virtualization"]
description = "vTPM based TDX attestation for Azure Confidential VMs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "tdx-vtpm"
path = "src/main.rs"

[dependencies]
az-cvm-vtpm = { path = "..", version = "0.5.2" }
base64-url = "2.0.0"
bincode.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ureq.workspace = true
zerocopy.workspace = true

[dev-dependencies]
openssl.workspace = true

[features]
default = ["attester", "verifier"]
attester = []
verifier = ["az-cvm-vtpm/verifier"]
