[package]
name = "detect-cvm-type"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "detect-cvm-type"
path = "src/main.rs"

[dependencies]
raw-cpuid = "11.0.1"
thiserror = "1.0.50"
